--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,30 @@ body {
   font-weight: 400;
   opacity: 0.5;
 }
+
+/* 滚动条的宽度 */
+
+::-webkit-scrollbar {
+  width: 8px; /*  */
+}
+
+/* 滚动条的轨道颜色 */
+
+::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background-color: #f0f0f0;
+}
+
+/* 滚动条的滑块样式 */
+
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+
+  border-radius: 4px;
+}
+
+/* 滚动条在鼠标悬停时的滑块颜色 */
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #999;
+}
