--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 
 body {
   margin: 0;
-  color: #fff;
+  color: #333;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   background-image: linear-gradient(to bottom, #020917, #101725);
 }
