--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
 		padding-top: 0;
 		padding-bottom: 0;
 		min-height: auto;
+
+		think,
+		details {
+			background-color: transparent !important;
+			padding: 0 !important;
+			margin-top: 0.5rem;
+			color: gray;
+		}
 	}
 
 	&[role='user'] {
@@ -28,22 +36,9 @@ hr {
 	display: none;
 }
 
-.ant-bubble-content {
-	think,
-	details {
-		background-color: transparent !important;
-		padding: 0 !important;
-		margin-top: 0.5rem;
-		color: gray;
-	}
-}
-
 h3 {
 	margin-top: 0.5rem !important;
 	margin-bottom: 0.5rem !important;
-}
-
-h3 {
 	font-size: 18px !important;
 }
 
@@ -61,17 +56,16 @@ body {
 	text-align: center;
 	flex-direction: column;
 	justify-content: center;
-}
+	h1 {
+		font-size: 3.6rem;
+		font-weight: 700;
+	}
 
-.content h1 {
-	font-size: 3.6rem;
-	font-weight: 700;
-}
-
-.content p {
-	font-size: 1.2rem;
-	font-weight: 400;
-	opacity: 0.5;
+	p {
+		font-size: 1.2rem;
+		font-weight: 400;
+		opacity: 0.5;
+	}
 }
 
 /* 滚动条的宽度 */
