optimize: 消息体中的代码块增加白色背景, 提高对比度

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
 		margin-top: 0.5rem !important;
 		margin-bottom: 0.5rem !important;
 	}
+
+	pre {
+		background-color: #fff;
+		border-radius: 8px;
+	}
 }
 
 hr {
