--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,46 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+	--theme-text-color: #333;
+	--theme-desc-color: #9ca3b3;
+	--theme-bg-color: #f2f4f7;
+	--theme-btn-bg-color: #fff;
+	--theme-main-bg-color: #fff;
+	--theme-border-color: #eff0f5;
+	--theme-splitter-color: #eff0f5;
+	--theme-button-border-color: #c9c9c9;
+	--theme-success-color: #52c41a;
+	--theme-warning-color: #faad14;
+	--theme-danger-color: #ff4d4f;
+	--theme-bubble-bg-color: #efeffd;
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--theme-text-color: #c9c9c9;
+		--theme-desc-color: #aaa;
+		--theme-bg-color: #000;
+		--theme-btn-bg-color: #333;
+		--theme-main-bg-color: #222;
+		--theme-border-color: #797979;
+		--theme-splitter-color: #55555555;
+		--theme-button-border-color: #c9c9c9;
+		--theme-bubble-bg-color: #424242;
+	}
+}
+
+.ant-collapse {
+	.ant-collapse-item {
+		.ant-collapse-header-text {
+			color: var(--theme-text-color);
+		}
+	}
+	.ant-collapse-expand-icon {
+		color: var(--theme-text-color) !important;
+	}
+}
+
 .ant-bubble-list {
 	.ant-bubble {
 		.ant-bubble-content {
@@ -20,7 +60,7 @@
 
 		&[role='user'] {
 			.ant-bubble-content {
-				background-color: #efeffd;
+				background-color: var(--theme-bubble-bg-color);
 				color: #fff;
 			}
 		}
@@ -31,8 +71,8 @@
 		}
 
 		pre {
-			background-color: #fff;
 			border-radius: 8px;
+			color: var(--theme-text-color);
 		}
 	}
 }
@@ -52,9 +92,14 @@ h3 {
 
 body {
 	margin: 0;
-	color: #333;
+	color: var(--default-text);
+
 	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 	background: white;
+}
+
+a {
+	color: var(----theme-text-color);
 }
 
 .content {
@@ -89,6 +134,12 @@ body {
 	background-color: #f0f0f0;
 }
 
+.dark {
+	::-webkit-scrollbar-track {
+		background-color: #333;
+	}
+}
+
 /* 滚动条的滑块样式 */
 
 ::-webkit-scrollbar-thumb {
@@ -97,8 +148,16 @@ body {
 	border-radius: 4px;
 }
 
+.dark::-webkit-scrollbar-thumb {
+	background-color: #555;
+}
+
 /* 滚动条在鼠标悬停时的滑块颜色 */
 
 ::-webkit-scrollbar-thumb:hover {
 	background-color: #999;
+}
+
+.dark::-webkit-scrollbar-thumb:hover {
+	background-color: #777;
 }
