--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ body {
 	margin: 0;
 	color: var(--default-text);
 
-	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+	font-family: AibabaPuHuiTi, sans-serif;
 	background: white;
 }
 
