--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 	--theme-warning-color: #faad14;
 	--theme-danger-color: #ff4d4f;
 	--theme-bubble-bg-color: #f2f4f7;
-	--theme-code-block-bg-color: transparent;
+	--theme-code-block-bg-color: #fff;
 }
 
 /* 夜间模式类名 */
@@ -29,7 +29,7 @@
 	--theme-splitter-color: #55555555;
 	--theme-button-border-color: #c9c9c9;
 	--theme-bubble-bg-color: #424242;
-	--theme-code-block-bg-color: transparent;
+	--theme-code-block-bg-color: #222;
 }
 
 .ant-collapse {
@@ -75,7 +75,7 @@
 		pre {
 			border-radius: 8px;
 			color: var(--theme-text-color);
-			background-color: var(--theme-code-block-bg-color);
+			background-color: var(--theme-code-block-bg-color) !important;
 		}
 	}
 }
