style(nextjs-app): 增加与 react-app 统一的 hr 样式

--- a/packages/nextjs-app/app/globals.css
+++ b/packages/nextjs-app/app/globals.css
@@ -172,3 +172,10 @@ body {
 	color: var(--theme-text-color);
 	font-family: Arial, Helvetica, sans-serif;
 }
+
+hr {
+	margin: 0.25rem auto;
+	color: #9ca3b3;
+	height: 0;
+	display: none;
+}
